# refreshmint

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  eslint-plugin-import-x.d.ts  eslint-plugin-react-hooks.d.ts  eslint.config.mjs  eslint.config.mts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.agents/: tsconfig.json
.agents/skills/scraper-scaffolder/: SKILL.md
.agents/skills/scraper-scaffolder/assets/: driver.mjs  manifest.json
.github/workflows/: build.yml  integration.yml
.husky/: pre-commit
builtin-extensions/: globals.d.ts  tsconfig.json  tsconfig.workspace.json
builtin-extensions/_shared/: refreshmint-util.mjs
builtin-extensions/bankofamerica/: driver.mjs  extract.mjs  manifest.json
builtin-extensions/chase/: driver.mjs  extract.mjs  manifest.json
builtin-extensions/chase/docs/: csv-download.md  statements-download.md
builtin-extensions/citi/: NOTES.md  driver.mjs  extract.mjs  manifest.json
builtin-extensions/paypal/: README.md  driver.mjs  manifest.json
builtin-extensions/providentcu/: README.md  driver.mjs  extract.mjs  manifest.json
builtin-extensions/target-circle-card/: README.md  driver.mjs  extract.mts  manifest.json  package.json  tsconfig.json
docker/: scrape-ci-repro.Dockerfile
docs/: TODO.md  bookkeeping-state-model.md  extension.md  extractor.md  gl-conversion.md  locking.md  playwright.md  refreshmint-feature-matrix.md  schedule-system-roadmap.md  scrape-browser-startup-investigation.md  scraper.md  scrapers.md
knowledge/sites/clipper-card/: README.md
plans/: 2026-02-24-post-to-gl.md  federated-noodling-sprout.md  graceful-brewing-comet.md
scripts/: build-extensions.mjs  build-scrape-ci-container.sh  download-sidecar.sh  get-git-user-ignore-file.mts
src/: App.css  App.tsx  ReportChart.tsx  ReportsTab.tsx  gl-transfer-utils.test.ts  gl-transfer-utils.ts  main.tsx  scrapeLog.ts  search-utils.test.ts  search-utils.ts  store.ts  tauri-commands.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: browser_test.rs  refreshmint_browser_startup.rs
src-tauri/src/: account_config.rs  account_journal.rs  binpath.rs  bookkeeping.rs  builtin_extensions.rs  categorize.rs  cli.rs  dedup.rs  extension.rs  extract.rs  gl.rs  gl_journal.rs  hledger.rs  js_module_loader.rs  ledger.rs  ledger_add.rs  ledger_open.rs  lib.rs  login_config.rs  main.rs  migration.rs  operations.rs  post.rs  reconcile.rs  report.rs  scrape.rs  secret.rs  staging.rs  transfer_detector.rs  ts_strip.rs  version.rs
src-tauri/src/gl/: beancount.rs  hledger.rs  tests.rs
src-tauri/src/hledger/: tests.rs
src-tauri/src/scrape/: browser.rs  debug.rs  js_api.rs  locator.rs  profile.rs  sandbox.rs
src-tauri/tests/: debug_integration.rs  extension_load_smoke.rs  locator_integration.rs  scrape_integration.rs
src/tabs/: BookkeepingTab.tsx  PipelineTab.tsx  ReportsTab.tsx  ScrapeTab.tsx  TransactionsTab.tsx  TransactionsTable.tsx
