[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "BSD-3-Clause"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
clap = { version = "4.5.58", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
rquickjs = { version = "0.9", features = ["classes", "futures", "macro", "parallel"] }
# Compatibility notes (verified with minimal repro crates in /tmp):
# - spider_chrome 2.37.129 + spider_chromiumoxide_cdp 0.7.8 => compile errors
# - spider_chrome 2.37.129 + spider_chromiumoxide_cdp 0.7.7 => compiles
# Use chromey main for both crates to keep CDP types/API in sync.
# Keep dependency key as `chromiumoxide` because the code imports `chromiumoxide::...`.
chromiumoxide = { package = "chromey", git = "https://github.com/spider-rs/chromey", branch = "main" }
spider_chromiumoxide_cdp = { package = "spider_chromiumoxide_cdp", git = "https://github.com/spider-rs/chromey", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
which = "7"
dirs = "6"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
# panic is ok for code paths that should not happen in reality
# panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.182"
xattr = "1.6.1"
# in tests, it is ok to #![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]
