[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "BSD-3-Clause"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
clap = { version = "4.5.58", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
rquickjs = { version = "0.11", features = ["array-buffer", "classes", "futures", "loader", "macro", "parallel"] }
# Pin to the last known-good commit from awslabs/llrt#1382.
# Later branch commits have not been validated here yet. This snapshot already
# includes the llrt_stream_web readable/reader fix for our reproduced case:
# under AsyncRuntime, this JS completed its reads and then aborted at teardown
# with `Assertion failed: (list_empty(&rt->gc_obj_list)), function JS_FreeRuntime`:
# `const stream = new ReadableStream({ start(c) { c.enqueue("a"); c.close(); } });
# const reader = stream.getReader();
# await reader.read();
# await reader.read();`
# The same repro passed cleanly with the `feat/fetch-body-streams` snapshot at
# 7d3953f7ccea72bc72b7bf01ca480e22106c6ecb, so pin LLRT there for now.
llrt_util = { git = "https://github.com/awslabs/llrt", package = "llrt_util", rev = "7d3953f7ccea72bc72b7bf01ca480e22106c6ecb" }
llrt_buffer = { git = "https://github.com/awslabs/llrt", package = "llrt_buffer", rev = "7d3953f7ccea72bc72b7bf01ca480e22106c6ecb" }
llrt_stream_web = { git = "https://github.com/awslabs/llrt", package = "llrt_stream_web", rev = "7d3953f7ccea72bc72b7bf01ca480e22106c6ecb" }
llrt_console = { git = "https://github.com/awslabs/llrt", package = "llrt_console", rev = "7d3953f7ccea72bc72b7bf01ca480e22106c6ecb" }
csv = "1.3"
lopdf = "0.35"
# Compatibility notes (verified with minimal repro crates in /tmp):
# - spider_chrome 2.37.129 + spider_chromiumoxide_cdp 0.7.8 => compile errors
# - spider_chrome 2.37.129 + spider_chromiumoxide_cdp 0.7.7 => compiles
# Keep dependency key as `chromiumoxide` because the code imports
# `chromiumoxide::...`. Pin to the tested chromey fork revision that restores
# CDP network event delivery and OOPIF frame/session routing.
chromiumoxide = { package = "chromey", git = "https://github.com/yonran/chromey", rev = "6c0db7204092fdcb23825399ef1c8733790df9be" }
spider_chromiumoxide_cdp = { package = "spider_chromiumoxide_cdp", git = "https://github.com/yonran/chromey", rev = "6c0db7204092fdcb23825399ef1c8733790df9be" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
which = "7"
dirs = "6"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
notify = "8.2"
base64 = "0.22"
regex = "1.12"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "36.0.0"
swc_ecma_visit = "21.0.0"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
# panic is ok for code paths that should not happen in reality
# panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.182"
xattr = "1.6.1"
security-framework = { version = "3.6.0", features = ["OSX_10_13"] }
# in tests, it is ok to #![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]

[patch.crates-io]
# Temporary pin to include macOS special-menu fixes (`set_as_windows_menu_for_nsapp` /
# `set_as_help_menu_for_nsapp`) so Window/Help get OS-managed entries like
# `Move & Resize`, `Full Screen Tile`, and Help search on newer macOS.
# PR: https://github.com/tauri-apps/muda/pull/322
# Issue: https://github.com/tauri-apps/tauri/issues/13605
# Related: https://github.com/tauri-apps/tauri/issues/12652
# muda issue: https://github.com/tauri-apps/muda/issues/263
muda = { git = "https://github.com/tauri-apps/muda", rev = "23643260921147afa17eeab8e4cf91184814c81a" }
